--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "exceljs": "^4.3.0",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
+    "i18next": "^21.4.0",
+    "i18next-fs-backend": "^1.1.1",
+    "i18next-http-middleware": "^3.1.4",
     "morgan": "~1.9.1"
   }
 }
